<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="@dimen/img_width_height"
        android:layout_height="@dimen/img_width_height"
        android:src="@drawable/ic_stopcovid"
        tools:ignore="ContentDescription"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:id="@+id/main_image"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="@dimen/slide_title"
        android:textStyle="bold"
        android:gravity="center"
        android:id="@+id/main_title"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        tools:ignore="SpUsage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_subtitle"
        android:textColor="@android:color/black"
        android:textSize="16dp"
        android:textStyle="bold"
        android:gravity="center"
        android:id="@+id/main_subtitle"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/main_title"
        android:layout_marginLeft="20dp"
        tools:ignore="SpUsage" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:alpha=".5"
        android:layout_below="@id/main_image"
        android:layout_marginTop="20dp"
        android:background="@android:color/black"
        android:id="@+id/view_top"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_top"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_indicazioni"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="20sp"
                android:id="@+id/title_indication"/>

            <!--  MASK INDICATION  -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="40dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/ic_head_mask"
                    android:layout_marginStart="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_mask_indication"
                        android:textStyle="bold"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:textColor="@android:color/black"/>

                </LinearLayout>

            </LinearLayout>

            <!--  END MASK INDICATION  -->

            <!--  DISTANCE INDICATION  -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="40dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/ic_distance"
                    android:layout_marginStart="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_distance_indication"
                        android:textStyle="bold"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:textColor="@android:color/black"/>

                </LinearLayout>


            </LinearLayout>

            <!--  END DISTANCE INDICATION  -->

            <!--  GATHERINGS INDICATION  -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="40dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/ic_gatherings"
                    android:layout_marginStart="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_gatherings_indication"
                        android:textStyle="bold"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:textColor="@android:color/black"/>

                </LinearLayout>


            </LinearLayout>

            <!--  END GATHERINGS INDICATION  -->

            <!--  WASH HANDS INDICATION  -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="40dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/ic_wash_hands"
                    android:layout_marginStart="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_wash_indication"
                        android:textStyle="bold"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:textColor="@android:color/black"/>

                </LinearLayout>


            </LinearLayout>

            <!--  END WASH HANDS INDICATION  -->

            <!--  COUGH INDICATION  -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="40dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/ic_cough"
                    android:layout_marginStart="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_cough_indication"
                        android:textStyle="bold"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:textColor="@android:color/black"/>

                </LinearLayout>


            </LinearLayout>

            <!--  END COUGH INDICATION  -->

            <!--  CALL POSITIVE INDICATION  -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/ic_infected"
                    android:layout_marginStart="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_infected_indication"
                        android:textStyle="bold"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:textColor="@android:color/black"/>

                </LinearLayout>


            </LinearLayout>

            <!--  END CALL POSITIVE INDICATION  -->


            <!--  POSITIVE BUTTON -->

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:alpha=".5"
                android:id="@+id/view_bottom"
                android:background="@android:color/black"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title_positive"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_positive"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_marginBottom="40dp"
                android:layout_marginStart="20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/positive_text_btn"
                android:textStyle="bold"
                android:textColor="@android:color/background_dark"
                android:id="@+id/btn_blind_signature"
                android:background="@drawable/rounded_red_button"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="40dp" />



        </LinearLayout>


    </ScrollView>





</RelativeLayout>